--- a/DirectX11/imgui.ini
+++ b/DirectX11/imgui.ini
@@ -14,10 +14,16 @@ Size=550,680
 Collapsed=1
 
 [Window][Light Option]
-Pos=809,188
+Pos=880,369
 Size=418,146
+Collapsed=1
 
 [Window][Camera Option]
-Pos=810,39
+Pos=874,600
 Size=415,148
+Collapsed=1
+
+[Window][Player]
+Pos=60,60
+Size=457,85
 
