--- a/DirectX11/DirectX11.vcxproj
+++ b/DirectX11/DirectX11.vcxproj
@@ -132,7 +132,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(ProjectDir)Assets\Lib\imgui\Lib\Debug;$(ProjectDir)Assets\Lib\Assimp\lib\Debug;$(ProjectDir)Assets\Lib\DirectXTex\lib\Debug;$(ProjectDir)Assets\Lib\JoltPhysics\Lib\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)Assets\Lib\imgui\Lib\Debug\$(Configuration);;$(ProjectDir)Assets\Lib\Assimp\lib\Debug\;$(ProjectDir)Assets\Lib\DirectXTex\lib\Debug\;$(ProjectDir)Assets\Lib\JoltPhysics\Lib\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <FxCompile>
       <ObjectFileOutput>$(ProjectDir)\Assets\Shader\%(Filename).cso</ObjectFileOutput>
@@ -161,13 +161,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalIncludeDirectories>
-      $(ProjectDir)Assets\Lib\imgui\Include;
-      $(ProjectDir)Assets\Lib\Assimp\include;
-      $(ProjectDir)Assets\Lib\DirectXTex;
-      $(ProjectDir)Assets\Lib\JoltPhysics\Include\Jolt;
-      %(AdditionalIncludeDirectories)
-      </AdditionalIncludeDirectories>
+     <AdditionalLibraryDirectories>$(ProjectDir)Assets\Lib\imgui\Lib\Release;$(ProjectDir)Assets\Lib\Assimp\lib\Release;$(ProjectDir)Assets\Lib\DirectXTex\lib\Release;$(ProjectDir)Assets\Lib\JoltPhysics\Lib\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <FxCompile>
       <ObjectFileOutput>$(ProjectDir)\Assets\Shader\%(Filename).cso</ObjectFileOutput>
