--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -28,7 +28,9 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v4  
+    with:
+      lfs: true
 
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1.3.1
