--- a/DirectX11/DirectX11.vcxproj
+++ b/DirectX11/DirectX11.vcxproj
@@ -132,7 +132,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(ProjectDir)Assets\Lib\imgui\Lib\Debug\$(Configuration);$(ProjectDir)Assets\Lib\Assimp\lib\Debug\;$(ProjectDir)Assets\Lib\DirectXTex\lib\Debug\;$(ProjectDir)Assets\Lib\JoltPhysics\Lib\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)Assets\Lib\imgui\Lib\Debug\;$(ProjectDir)Assets\Lib\Assimp\lib\Debug\;$(ProjectDir)Assets\Lib\DirectXTex\lib\Debug\;$(ProjectDir)Assets\Lib\JoltPhysics\Lib\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <FxCompile>
       <ObjectFileOutput>$(ProjectDir)\Assets\Shader\%(Filename).cso</ObjectFileOutput>
