1. 追加json库用于读取文件 2. 追加ModelManager用于读取模型 避免重复 3. 修正yml文件 使用utf-8编码

--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -13,6 +13,9 @@ env:
   # Configuration type to build.
   BUILD_CONFIGURATION: Debug
 
+  # Compile using UTF-8
+  LANG: en_US.UTF-8
+
 permissions:
   contents: read
 
@@ -31,14 +34,6 @@ jobs:
 
       - name: Restore NuGet packages
         run: nuget restore ${{env.SOLUTION_FILE_PATH}}
-
-      # --- 调试步骤：确认 imgui.lib 是否存在且为大文件 ---
-      - name: List contents of imgui.lib dir
-        run: dir DirectX11\Assets\Lib\imgui\Lib\Debug
-
-      - name: Check all .lib file sizes
-        run: |
-          Get-ChildItem -Recurse -Filter *.lib | Select-Object FullName,Length
 
       # --- 编译 ---
       - name: Build Solution (Debug x64)
