1.修正SignalBus的文件名 2.追加UIComponent，用于之后的扩展以及管理 3. 追加UIBar，具体的实现方法有待补充 4. 追加LivingEntity用于管理玩家的生命值，今后计划追加饥饿值，干渴值的系统 与Player共同管理玩家生命值的状态

--- a/DirectX11/DirectX11.vcxproj.filters
+++ b/DirectX11/DirectX11.vcxproj.filters
@@ -189,7 +189,7 @@
     <ClCompile Include="DebugLog.cpp">
       <Filter>源文件\System</Filter>
     </ClCompile>
-    <ClCompile Include="SignalBus.cpp">
+    <ClCompile Include="GameSignalBus.cpp">
       <Filter>源文件\System</Filter>
     </ClCompile>
     <ClCompile Include="Geometry.cpp">
@@ -235,6 +235,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="ModelManager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="LivingEntity.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="UIBar.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -314,7 +320,7 @@
     <ClInclude Include="Signal.hpp">
       <Filter>头文件\System</Filter>
     </ClInclude>
-    <ClInclude Include="SignalBus.h">
+    <ClInclude Include="GameSignalBus.h">
       <Filter>头文件\System</Filter>
     </ClInclude>
     <ClInclude Include="DebugLog.h">
@@ -372,6 +378,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="ModelManager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="LivingEntity.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="UIBar.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
