--- a/DirectX11/DirectX11.vcxproj
+++ b/DirectX11/DirectX11.vcxproj
@@ -189,6 +189,7 @@
     <ClCompile Include="KInput.cpp" />
     <ClCompile Include="Layers.cpp" />
     <ClCompile Include="LightBase.cpp" />
+    <ClCompile Include="LivingEntity.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="MeshBuffer.cpp" />
@@ -207,10 +208,11 @@
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShapeFactory.cpp" />
-    <ClCompile Include="SignalBus.cpp" />
+    <ClCompile Include="GameSignalBus.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="ThirdPersonCamera.cpp" />
     <ClCompile Include="Transform.cpp" />
+    <ClCompile Include="UIBar.cpp" />
     <ClCompile Include="UIBasicEffect.cpp" />
     <ClCompile Include="UIElement.cpp" />
     <ClCompile Include="UIFontSet.cpp" />
@@ -235,6 +237,7 @@
     <ClInclude Include="KInput.h" />
     <ClInclude Include="Layers.h" />
     <ClInclude Include="LightBase.h" />
+    <ClInclude Include="LivingEntity.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="MeshBuffer.h" />
     <ClInclude Include="Model.h" />
@@ -253,10 +256,11 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShapeFactory.h" />
     <ClInclude Include="Signal.hpp" />
-    <ClInclude Include="SignalBus.h" />
+    <ClInclude Include="GameSignalBus.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="ThirdPersonCamera.h" />
     <ClInclude Include="Transform.h" />
+    <ClInclude Include="UIBar.h" />
     <ClInclude Include="UIBasicEffect.h" />
     <ClInclude Include="UIElement.h" />
     <ClInclude Include="UIFontSet.h" />
