--- a/DirectX11/DirectX11.vcxproj
+++ b/DirectX11/DirectX11.vcxproj
@@ -126,14 +126,12 @@
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <DebugInformationFormat>None</DebugInformationFormat>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
       <AdditionalIncludeDirectories>$(ProjectDir)Assets\Lib\imgui\Include;$(ProjectDir)Assets\Lib\Assimp\include;$(ProjectDir)Assets\Lib\DirectXTex;$(ProjectDir)Assets\Lib\JoltPhysics\Include\Jolt;$(ProjectDir)Assets\Lib\JoltPhysics\Include\;$(ProjectDir)Assets\Lib;$(ProjectDir)Assets\Lib\nolmann;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(ProjectDir)Assets\Lib\imgui\Lib\Debug;$(ProjectDir)Assets\Lib\Assimp\lib;$(ProjectDir)Assets\Lib\DirectXTex\lib\Debug;$(ProjectDir)Assets\Lib\JoltPhysics\Lib\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <FxCompile>
@@ -182,6 +180,7 @@
     <ClCompile Include="DirLight.cpp" />
     <ClCompile Include="DXTrace.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="HungerComponent.cpp" />
     <ClCompile Include="IEffect.cpp" />
     <ClCompile Include="FirstPersonCamera.cpp" />
     <ClCompile Include="GameApp.cpp" />
@@ -230,6 +229,7 @@
     <ClInclude Include="DirLight.h" />
     <ClInclude Include="DXTrace.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="HungerComponent.h" />
     <ClInclude Include="IEffect.h" />
     <ClInclude Include="FirstPersonCamera.h" />
     <ClInclude Include="GameApp.h" />
